--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
    <script src="app.js"></script>
    <script src="toggleNav/jquery.slicknav.js"></script>
+   <!-- for the toggle navigation I'm using the slicknav plugin -->
    <script>
     $(function(){
       $('#mobileMenu').slicknav();
